<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="location">Location</string>
    <string name="adharnumber">Aadhar number</string>
    <string name="vehiclenumber">Vehicle number</string>
    <string name="phone">Phone</string>
    <string name="offenses">Offenses</string>
    <string name="emailid">Email</string>
    <string name="videoorimage">Video</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="caseType">Case Type</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">loading</string>
    <string name="Victimsaadarnumber">License No</string>
    <string name="uploading_">Uploading...!</string>
    <string name="todo">TODO</string>

</resources>
