<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addharEditFromresulteditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/shapefortext"
        android:gravity="center"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="@string/search" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchForVahiclebutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:background="@drawable/loginbuttonpress"
        android:visibility="invisible"
        android:text="Search" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/searchradioGroup"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shapefortext" >

            <RadioButton
                android:id="@+id/adaharradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:checked="true"
                android:textColor="@android:color/white"
                android:text="@string/adharnumber" />

            <RadioButton
                android:id="@+id/vehiclenumberradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="70dp"
                android:text="@string/vehiclenumber" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/animationbutton"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/searchbar" />

    </LinearLayout>

</LinearLayout>