<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" 
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/shapefortext"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" 
                android:gravity="center"
                android:textColor="@android:color/white">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/userpasswordEditText"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/shapefortext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" 
                android:gravity="center"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="23dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="92dp"
                android:text="@string/login" 
                android:background="@drawable/loginbuttonpress"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
