<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/addharEditFromresulteditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shapefortext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/adharnumber"
            android:inputType="number"
            android:enabled="false"
            android:textColor="@android:color/white" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:text="@string/adharnumber"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/vehiclenumber"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/vahiclenumberFromresulteditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shapefortext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/vehiclenumber"
            android:inputType="text"
            android:enabled="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/caseType"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/casetypeFromResultEdittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shapefortext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/caseType"
            android:inputType="text"
            android:enabled="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="5dp"
            android:text="@string/location" />

        <EditText
            android:id="@+id/locationResultFromsearcheditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shapefortext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/location"
            android:inputType="text"
            android:enabled="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/mapFromResults"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/loginbuttonpress"
        android:text="@string/location" />

</RelativeLayout>