<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/locationeditText"
                        android:layout_width="210dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:textColor="@android:color/white" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/mapclickbutton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/loginbuttonpress"
                        android:text="Map" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="25dp">

                    <EditText
                        android:id="@+id/nameeditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:hint="@string/name"
                        android:textColor="@android:color/white" 
                        android:gravity="center"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <EditText
                        android:id="@+id/adharnumbereditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/adharnumber"
                        android:inputType="number"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <EditText
                        android:id="@+id/vehiclenumbereditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/vehiclenumber"
                        android:inputType="text"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <EditText
                        android:id="@+id/phoneeditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="25dp">

                    <Spinner
                        android:id="@+id/caseTypespinner"
                        android:background="@drawable/shapefortext"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/shapeforimage" >

                    <ImageView
                        android:id="@+id/captureimageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/shapeforimage"
                        android:src="@drawable/capture" >
                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/capturebutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="28dp"
                            android:background="@drawable/loginbuttonpress"
                            android:text="Capture" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <TextView
                        android:id="@+id/dateandtimetextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp" >

                    <EditText
                        android:id="@+id/offenceeditText"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/offenses"
                        android:inputType="text|textMultiLine"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" >

                    <EditText
                        android:id="@+id/emaiideditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/emailid"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="25dp">

                    <EditText
                        android:id="@+id/addharEditFromresulteditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:textColor="@android:color/white" 
                        android:hint="@string/address"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="25dp">

                    <EditText
                        android:id="@+id/victimadarnumbereditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shapefortext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/Victimsaadarnumber"
                        android:inputType="text"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" >

                    <Button
                        android:id="@+id/addchargesheetbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:background="@drawable/loginbuttonpress"
                        android:text="Add" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" >
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>